# aigc-assistant

./: .env.example  .gitignore  AI_SEARCH_IMPROVEMENT.md  CLAUDE.md  KNOWLEDGE_GRAPH.md  README.md  developers.md  docker-compose.yml  package-lock.json  package.json  start.sh  stop.sh
.husky/: pre-commit
backend/: .env.example  server.js
backend/config/: database.js
backend/migrations/: migrateSQLiteToPostgres.js  migrateToAssets.js
backend/models/: Asset.js  AssetRelationship.js  Image.js  Prompt.js  index.js
backend/routes/: assets.js  graph.js  images.js  prompts.js  relationships.js  themes.js
backend/services/: graphService.js  imageServiceClient.js
backend/utils/: vectorSearch.js
docker/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AssetInspector.css  AssetInspector.jsx  ImageCard.jsx
frontend/src/components/graph/: GraphControls.css  GraphControls.jsx  GraphLegend.css  GraphLegend.jsx  GraphNode.css  GraphNode.jsx  GraphVisualization.css  GraphVisualization.jsx
frontend/src/hooks/: useAssets.js  useGraph.js  useImages.js  usePrompts.js
frontend/src/pages/: ImagesPage.jsx  KnowledgeGraphPage.css  KnowledgeGraphPage.jsx  SearchPage.jsx
frontend/src/utils/: graphConfig.js
image-service/: .env.example  README.md  config.py  image_processor.py  main.py  pyproject.toml
xray/: config-example.json
